Hover checks implemented - notes no longer get created when overlapping

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@ body, html {
 }
 
 .App {
-  text-align: center;
+  width: 100%;
+  height: 100vh;
 }
 
 .Navbar {
@@ -24,6 +25,10 @@ body, html {
   border-style: none;
   margin: 0px 5px 0px 5px;
   border-radius: 10px;
+
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
 
 .NavbarButton:hover {
@@ -45,14 +50,18 @@ body, html {
 
 .BoardNote {
   text-align: center;
+  vertical-align: middle;
   display: flex;
   align-items: center;
-  background-color: lightgray;
-  height: 50px;
+  background-color: rgb(157, 157, 157);
   border-radius: 5px;
-  width: 50px;
+  width: 100px;
+  height: 100px;
+  position: absolute;
+
+  padding-left: 10px;
 }
 
 .BoardNote:hover {
-  background-color: aliceblue;
+  background-color: lightgrey;
 }
